--- a/web/skripte.css
+++ b/web/skripte.css
@@ -60,6 +60,18 @@ td.newsbody {
 	margin-left : 2em;
 }
 
+td.bad_stat {
+	background: #ff0000;
+	color: #000000;
+        text-align: center;
+}
+
+td.good_stat {
+	background: #00ff00;
+	color: #000000;
+        text-align: center;
+}
+
 .hide {
 	display : none;
 }
